# kata-tennis-scoring

./: .gitignore  Makefile.am  README.md  pyproject.toml
c/src/: main.c  tennis_scoring.c  tennis_scoring.h
c/tests/: Makefile.am  check_tennis_scoring.c
c_implementation/: .gitignore  configure.ac
python/: README.md  pyproject.toml
python/src/tennis_scoring/: game.py
python/tests/: test_game.py  test_game_scenarios.py
src/: Makefile.am  tennis_scoring.c  tennis_scoring.h
tests/: check_tennis_scoring.c  test_tennis_scoring.py
typescript/: .gitignore  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: game.ts  index.ts
typescript/test/: game.test.ts
