[tool.poetry]
name = "tennis_scoring"
version = "0.1.0"
description = ""
authors = ["Kyle Adams <kadams54@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.950"
pylint = "^2.12.2"
pytest = "^7.1.1"
pytest-mypy = "^0.9.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
